# wolf-midicurve

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md
.github/workflows/: wolf-mapper.yml  wolf-midicurve.yml
src/: CMakeLists.txt  Config.hpp  DistrhoPluginInfo.h  Makefile  WolfMapperPlugin.cpp  WolfMapperUI.cpp  WolfMapperUI.hpp  WolfMidiCurveParameters.hpp  WolfMidiCurvePlugin.cpp  WolfMidiCurveUI.cpp  WolfMidiCurveUI.hpp
src/Widgets/: GraphWidget.hpp
